--- a/config/hosts.config
+++ b/config/hosts.config
@@ -29,9 +29,9 @@
 1 replica1 11010
 2 replica2 11020
 3 replica3 11030
-4 replica4 11040
-5 replica5 11050
-6 replica6 11060
-7 replica7 11070
+#4 replica4 11040
+#5 replica5 11050
+#6 replica6 11060
+#7 replica7 11070
 
 7001 127.0.0.1 11100
