--- a/common/pom.xml
+++ b/common/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
     </dependencies>
 </project>
