--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,7 @@ services:
       context: .
       dockerfile: replica.dockerfile
     ports:
-      - "8090:8090"
-      - "11000:11000"
-      - "11001:11001"
+      - "127.0.0.1:8090:8090"
   replica1:
     environment:
       - replica_id=1
@@ -16,9 +14,7 @@ services:
       context: .
       dockerfile: replica.dockerfile
     ports:
-      - "8091:8090"
-      - "11010:11010"
-      - "11011:11011"
+      - "127.0.0.1:8091:8090"
   replica2:
     environment:
       - replica_id=2
@@ -26,9 +22,7 @@ services:
       context: .
       dockerfile: replica.dockerfile
     ports:
-      - "8092:8090"
-      - "11020:11020"
-      - "11021:11021"
+      - "127.0.0.1:8092:8090"
   replica3:
     environment:
       - replica_id=3
@@ -36,58 +30,41 @@ services:
       context: .
       dockerfile: replica.dockerfile
     ports:
-      - "8093:8090"
-      - "11030:11030"
-      - "11031:11031"
+      - "127.0.0.1:8093:8090"
+
   proxy0:
+    command: sh -c "sleep 10; java -jar /app.jar;"
     environment:
       - proxy_id=0
     build:
       context: .
       dockerfile: proxy.dockerfile
     ports:
-      - "8080:8080"
-    depends_on:
-      - replica0
-      - replica1
-      - replica2
-      - replica3
+      - "127.0.0.1:8080:8080"
   proxy1:
+    command: sh -c "sleep 10; java -jar /app.jar;"
     environment:
       - proxy_id=1
     build:
       context: .
       dockerfile: proxy.dockerfile
     ports:
-      - "8081:8080"
-    depends_on:
-      - replica0
-      - replica1
-      - replica2
-      - replica3
+      - "127.0.0.1:8081:8080"
   proxy2:
+    command: sh -c "sleep 10; java -jar /app.jar;"
     environment:
       - proxy_id=2
     build:
       context: .
       dockerfile: proxy.dockerfile
     ports:
-      - "8082:8080"
-    depends_on:
-      - replica0
-      - replica1
-      - replica2
-      - replica3
+      - "127.0.0.1:8082:8080"
   proxy3:
+    command: sh -c "sleep 10; java -jar /app.jar;"
     environment:
       - proxy_id=3
     build:
       context: .
       dockerfile: proxy.dockerfile
     ports:
-      - "8083:8080"
-    depends_on:
-      - replica0
-      - replica1
-      - replica2
-      - replica3
+      - "127.0.0.1:8083:8080"
