--- a/client/pom.xml
+++ b/client/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.9</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.formdev</groupId>
+			<artifactId>flatlaf</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
