--- a/proxy/src/main/resources/application.properties
+++ b/proxy/src/main/resources/application.properties
@@ -20,3 +20,5 @@ server.ssl.key-alias=csd
 
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.open-in-view=false
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
