--- a/replica/src/main/resources/application.properties
+++ b/replica/src/main/resources/application.properties
@@ -18,3 +18,5 @@ replica.id=0
 
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.open-in-view=false
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
