--- a/config/system.config
+++ b/config/system.config
@@ -36,7 +36,7 @@ system.communication.hmacAlgorithmProvider = SunJCE
 system.communication.secretKeyAlgorithmProvider = SunJCE
 
 #Signature algorithm provider ('SunRsaSign' is the default value)
-system.communication.signatureAlgorithmProvider = SunRsaSign
+system.communication.signatureAlgorithmProvider = BC
 
 #Hash algorithm provider ('SUN' is the default value)
 system.communication.hashAlgorithmProvider = SUN
@@ -85,10 +85,10 @@ system.communication.inQueueSize = 500000
 system.communication.outQueueSize = 500000
 
 #Set to 1 if SMaRt should use signatures, set to 0 if otherwise
-system.communication.useSignatures = 0
+system.communication.useSignatures = 1
 
 #Set to 1 if clients should use MAC vectors, set to 0 if otherwise
-system.communication.useMACs = 1
+system.communication.useMACs = 0
 
 #Print information about the replica when it is shutdown
 system.shutdownhook = true
