--- a/security.conf
+++ b/security.conf
@@ -21,3 +21,8 @@ keyAlias = clientsignature
 alg = ECDSA
 ; provider =
 ellipticCurve = secp256r1
+
+[transaction_digest_suite]
+type = Hash
+alg = SHA-256
+; provider =
