--- a/proxy/src/main/resources/application.properties
+++ b/proxy/src/main/resources/application.properties
@@ -7,18 +7,18 @@ server.ssl.key-store=keystore/csd.p12
 server.ssl.key-store-password=aq1sw2de3
 server.ssl.key-alias=csd
 
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
-#spring.h2.console.settings.web-allow-others=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.settings.web-allow-others=true
 
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#spring.datasource.url=jdbc:h2:file:./ledger
-#spring.datasource.username=sa
-#spring.datasource.password=
+spring.datasource.url=jdbc:h2:file:./ledger
+spring.datasource.username=sa
+spring.datasource.password=
 
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.open-in-view=false
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
