--- a/replica/src/main/resources/application.properties
+++ b/replica/src/main/resources/application.properties
@@ -3,20 +3,18 @@ server.port=8090
 
 replica.id=0
 
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
-#spring.h2.console.settings.web-allow-others=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.settings.web-allow-others=true
 
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#spring.datasource.url=jdbc:h2:mem:state
-#spring.datasource.username=sa
-#spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:state
+spring.datasource.username=sa
+spring.datasource.password=
 
-#replica.datasource.preload = true
-
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.open-in-view=false
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
