--- a/proxy/pom.xml
+++ b/proxy/pom.xml
@@ -2,12 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.csd</groupId>
 	<artifactId>proxy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,6 +18,14 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,9 +61,9 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.csd</groupId>
-			<artifactId>bft-smart</artifactId>
-			<version>1.2.0</version>
+			<groupId>com.github.bft-smart</groupId>
+			<artifactId>library</artifactId>
+			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
@@ -65,11 +75,6 @@
 			<artifactId>netty-all</artifactId>
 			<version>4.1.34.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>com.yahoo.ycsb</groupId>
-			<artifactId>core</artifactId>
-			<version>0.1.4</version>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -77,6 +82,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${project.parent.version}</version>
 			</plugin>
 		</plugins>
 	</build>
