--- a/security.conf
+++ b/security.conf
@@ -17,6 +17,11 @@ alg = SHA512withECDSA
 ; provider =
 keyAlias = clientsignature
 
+[proxy_signature_suite]
+alg = SHA512withECDSA
+; provider =
+keyAlias = proxysignature
+
 [client_signature_keygen_suite]
 alg = ECDSA
 ; provider =
