reafactor controller wip

--- a/security.conf
+++ b/security.conf
@@ -18,9 +18,9 @@ alg = SHA512withECDSA
 keyAlias = clientsignature
 
 [proxy_signature_suite]
-alg = SHA512withECDSA
-; provider =
-keyAlias = proxysignature
+alg = SHA512withRSA
+provider = BC
+keyAlias = replysignature
 
 [client_signature_keygen_suite]
 alg = ECDSA
