refactor client done

--- a/security.conf
+++ b/security.conf
@@ -27,7 +27,7 @@ alg = ECDSA
 ; provider =
 ellipticCurve = secp256r1
 
-[transaction_digest_suite]
+[block_digest_suite]
 type = Hash
 alg = SHA-256
 ; provider =
