--- a/security.conf
+++ b/security.conf
@@ -18,9 +18,9 @@ alg = SHA512withECDSA
 keyAlias = clientsignature
 
 [proxy_signature_suite]
-alg = SHA512withRSA
+alg = SHA512withECDSA
 provider = BC
-keyAlias = replysignature
+keyAlias = proxysignature
 
 [client_signature_keygen_suite]
 alg = ECDSA
