--- a/replica/src/main/resources/application.properties
+++ b/replica/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=8090
 
 replica.id=0
+replica.block.size=5
+replica.difficulty.target=1
 proxy.quorum.size = 3
 
 spring.h2.console.enabled=true
