--- a/security.conf
+++ b/security.conf
@@ -31,3 +31,8 @@ ellipticCurve = secp256r1
 type = Hash
 alg = SHA-256
 ; provider =
+
+[transaction_digest_suite]
+type = Hash
+alg = SHA-256
+; provider =
