--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>common</module>
         <module>proxy</module>
         <module>replica</module>
+        <module>miner</module>
     </modules>
 
     <properties>
