--- a/replica/src/main/resources/application.properties
+++ b/replica/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8090
 
 replica.id=0
 replica.block.size=5
+replica.block.reward=50
 replica.difficulty.target=1
 proxy.quorum.size = 3
 
