--- a/replica/src/main/resources/application.properties
+++ b/replica/src/main/resources/application.properties
@@ -6,6 +6,7 @@ replica.block.size=5
 replica.block.reward=50
 replica.difficulty.target=1
 proxy.quorum.size = 3
+proxy.number = 4
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
