--- a/security.conf
+++ b/security.conf
@@ -10,29 +10,29 @@ trustManagerFactoryAlg = SunX509
 [client_id_digest_suite]
 type = Hash
 alg = SHA-256
-; provider =
+provider = SUN
 
 [client_signature_suite]
 alg = SHA512withECDSA
-; provider =
+provider = BC
 keyAlias = clientsignature
 
 [proxy_signature_suite]
-alg = SHA512withECDSA
-provider = BC
+alg = SHA512withRSA
+; provider = BC
 keyAlias = proxysignature
 
 [client_signature_keygen_suite]
 alg = ECDSA
-; provider =
+provider = BC
 ellipticCurve = secp256r1
 
 [block_digest_suite]
 type = Hash
 alg = SHA-256
-; provider =
+provider = SUN
 
 [transaction_digest_suite]
 type = Hash
 alg = SHA-256
-; provider =
+provider = SUN
