--- a/proxy/src/main/resources/application.properties
+++ b/proxy/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8080
 proxy.id = 0
 proxy.blockmess = true
 proxy.pow = false
+proxy.quorum.size=3
+proxy.number=4
 
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=keystore/csd.p12
