--- a/client/pom.xml
+++ b/client/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>flatlaf</artifactId>
 			<version>2.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>14.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
