--- a/proxy/src/main/resources/application.properties
+++ b/proxy/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 proxy.id = 0
-proxy.blockmess = true
-proxy.pow = false
+proxy.blockmess = false
+proxy.pow = true
 proxy.quorum.size=3
 proxy.number=4
 
