--- a/security.conf
+++ b/security.conf
@@ -14,7 +14,7 @@ provider = SUN
 
 [client_signature_suite]
 alg = SHA512withECDSA
-provider = BC
+; provider = BC
 keyAlias = clientsignature
 
 [proxy_signature_suite]
@@ -24,7 +24,7 @@ keyAlias = proxysignature
 
 [client_signature_keygen_suite]
 alg = ECDSA
-provider = BC
+; provider = BC
 ellipticCurve = secp256r1
 
 [block_digest_suite]
