--- a/client/pom.xml
+++ b/client/pom.xml
@@ -69,7 +69,14 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>14.0</version>
+			<version>31.1-jre</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.knowm.xchart</groupId>
+			<artifactId>xchart</artifactId>
+			<version>3.8.1</version>
 		</dependency>
 	</dependencies>
 
