--- a/deployment/local-pow-docker-compose.yml
+++ b/deployment/local-pow-docker-compose.yml
@@ -5,24 +5,32 @@ services:
     build:
       context: .
       dockerfile: replica.dockerfile
+    ports:
+      - "127.0.0.1:8090:8090"
   replica1:
     environment:
       - replica_id=1
     build:
       context: .
       dockerfile: replica.dockerfile
+    ports:
+      - "127.0.0.1:8091:8090"
   replica2:
     environment:
       - replica_id=2
     build:
       context: .
       dockerfile: replica.dockerfile
+    ports:
+      - "127.0.0.1:8092:8090"
   replica3:
     environment:
       - replica_id=3
     build:
       context: .
       dockerfile: replica.dockerfile
+    ports:
+      - "127.0.0.1:8093:8090"
 
   proxy0:
     command: sh -c "sleep 40; java -jar /app.jar;"
@@ -32,7 +40,7 @@ services:
       context: .
       dockerfile: proxy.dockerfile
     ports:
-      - "192.99.168.235:30080:8080"
+      - "127.0.0.1:8080:8080"
   proxy1:
     command: sh -c "sleep 40; java -jar /app.jar;"
     environment:
@@ -43,7 +51,7 @@ services:
     ports:
       - "127.0.0.1:8081:8080"
   proxy2:
-    command: sh -c "sleep 20; java -jar /app.jar;"
+    command: sh -c "sleep 40; java -jar /app.jar;"
     environment:
       - proxy_id=2
     build:
@@ -52,7 +60,7 @@ services:
     ports:
       - "127.0.0.1:8082:8080"
   proxy3:
-    command: sh -c "sleep 20; java -jar /app.jar;"
+    command: sh -c "sleep 40; java -jar /app.jar;"
     environment:
       - proxy_id=3
     build:
